[package]
name = "temporal-client"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = { workspace = true }
description = "Clients for interacting with Temporal Clusters"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

[features]
telemetry = ["dep:opentelemetry"]

[dependencies]

[dev-dependencies]
assert_matches = "1"
mockall = "0.13"

[lints]
workspace = true
