[package]
name = "temporal-sdk-core-api"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Judge <spencer@temporal.io>"]
license-file = { workspace = true }
description = "Interface definitions for the Temporal Core SDK"
homepage = "https://temporal.io/"
repository = "https://github.com/temporalio/sdk-core"
keywords = ["temporal", "workflow"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
otel_impls = ["dep:opentelemetry"]

[dependencies]

[lints]
workspace = true
