[package]
name = "temporal-sdk-core-test-utils"
version = "0.1.0"
authors = ["Spencer Judge <spencer@temporal.io>"]
edition = "2021"
license-file = { workspace = true }

[[bin]]
name = "histfetch"
path = "src/histfetch.rs"

[features]
default = ["ephemeral-server"]
ephemeral-server = ["temporal-sdk-core/ephemeral-server"]

[dependencies]

[lints]
workspace = true
